# aoti_mlip

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  setup.py
.github/workflows/: ci.yml
aoti_mlip/calculators/: mattersim.py  mattersim_jax.py
aoti_mlip/models/: mattersim.py
aoti_mlip/models/mattersim_modules/: angle_encoding.py  edge_encoding.py  layers.py  m3gnet.py  message_passing.py  scaling.py
aoti_mlip/models/mattersim_modules/dataloader/: build.py  converter.py  setup.py
aoti_mlip/utils/: aoti_compile.py  aoti_tools.py  batch_info.py  download_utils.py  torch_version.py
examples/: benchmark.py  compile_and_load.py  compile_mattersim.py  dummy_torchax_export.py  load_model.py  plot_timings.py  torchax_export.py
tests/: conftest.py
tests/calculators/: test_mattersim.py  test_mattersim_calculator.py
tests/models/: test_compile_mattersim.py
tests/utils/: test_batch_info.py  test_download_utils.py
